syntax = "proto3";

package livevox.is.metricsservice.controller.grpc;

option java_multiple_files = true;
option java_package = "com.livevox.is.metricsservice.controller.grpc";
option java_outer_classname = "GenericServiceProto";

//package livevox.is.metricsservice.controller.grpc;
//
//option java_package = "com.livevox.is.metricsservice.controller.grpc";
//option java_multiple_files = true;
//
//import "livevox/is/domain/metrics/request_messages.proto";
//import "livevox/is/domain/metrics/response_messages.proto";
//
service GenericController {
//  rpc getGenericResponse()
//      returns (stream livevox.is.domain.metrics.response.StringGrpc);

  rpc getAgents(AgentRequest) returns (AgentResponse);

}

message AgentRequest {
  int32 clientId = 1;
  int32 offset = 2;
  string token = 3;
}

message AgentResponse {
  bool active = 1;
  int32 clientId = 2;
  string firstName = 3;
  string lastName = 4;
  int32 id = 5;
  string loginId = 6;
  string phone = 7;
}
