syntax = "proto3";

package livevox.is.metricsservice.controller.grpc;

option java_package = "com.livevox.is.metricsservice.controller.grpc";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "livevox/is/domain/metrics/request_messages.proto";
import "livevox/is/domain/metrics/response_messages.proto";

service InteractionEventController {

  rpc getActiveServices(livevox.is.domain.metrics.request.ActiveServicesRequestGrpc)
      returns (stream livevox.is.domain.metrics.response.IdClassGrpc);

  rpc getActiveServiceMetrics(livevox.is.domain.metrics.request.ActiveServiceMetricsGrpcRequest)
      returns (livevox.is.domain.metrics.response.ServiceMetricsGrpc);

  rpc getCallMetrics(livevox.is.domain.metrics.request.CallMetricsRequestGrpc)
      returns (livevox.is.domain.metrics.response.ServiceMetricsGrpc);

}